scrollbar fix

--- a/src/components/Popup/styles.module.scss
+++ b/src/components/Popup/styles.module.scss
@@ -48,6 +48,7 @@
 
 		&::-webkit-scrollbar-track {
 			background-color: transparent;
+			margin-bottom: 2.5rem;
 		}
 
 		&::-webkit-scrollbar-thumb {
